--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<html>
+  <object width="600" height="400">
+  <param name="movie" value="c.swf">
+  <embed src="" width="600" height="400"
+</html>
