--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
-  <object width="600" height="400">
-  <param name="movie" value="c.swf">
-  <embed src="" width="600" height="400"
+<!DOCTYPE html>
+<head>
+  <title>DAWG</title> 
+  <meta charset="utf8">
+</head>
+<html lang=en>
+  <h1>3DAWG</h1>
+    <object width="600" height="400">
+    <param name="movie" value="SSF2.swf">
+    <embed src="" width="600" height="400">
 </html>
